--- a/global.css
+++ b/global.css
@@ -91,18 +91,11 @@
 .clr{
 	*zoom:1;/*for IE ，active the 'hasLayout'*/
 }
-/*position: fixed的缩写，原子类*/
-
 .pf {
     position: fixed;
-    /*chrome 内核 浏览器 position: fixed 防止抖动*/
-    -webkit-transform: translateZ(0);
+    -webkit-transform: translateZ(0);/*chrome 内核浏览器 position: fixed 防止抖动*/
 }
-
-
-/*利用绝对定位宽高拉升原理，中心居中元素，原子类*/
-
-.middle {
+.middle {/*利用绝对定位宽高拉升原理，中心居中元素*/
     position: absolute;
     top: 0;
     right: 0;
@@ -110,11 +103,7 @@
     left: 0;
     margin: auto;
 }
-
-
-/*利用相对定位于`CSS3`使元素垂直居中，原子类*/
-
-.middle-v {
+.middle-r{/*利用相对定位和`CSS3`使元素垂直居中*/
     position: relative;
     top: 50%;
     -webkit-transform: -webkit-translateY(-50%);
@@ -122,87 +111,42 @@
     -o-transform: -o-translateY(-50%);
     transform: translateY(-50%);
 }
-
-
-/*元素计算宽高德盒子模型以`border`为外界限，原子类*/
-
-.bb {
+.bs-bb{/*元素计算宽高的盒子模型以`border`为外界限*/
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
 /*********************样式重置类*****************/
-/*
- * 当`body`宽度大于`html`宽度时，某些浏览器会出现内部滚动条，所以给`html、body`设置宽度100%。
- * 取消部分浏览器点击有阴影。
- * 优化移动端滚动事件。
- * 使字体渲染更顺滑。
- */
 html,
-body {
-    width: 100%;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    -webkit-overflow-scrolling: touch;
+body { 
+    width: 100%;/* 当body宽度大于html宽度时，某些浏览器会出现内部滚动条，所以给html、body设置宽度100%*/
+    
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);/*取消部分浏览器点击有阴影*/
+    
+    -webkit-overflow-scrolling: touch;/* 优化移动端滚动事件*/
     overflow-scrolling: touch;
-    -webkit-font-smoothing: antialiased;
+	
+    -webkit-font-smoothing: antialiased;/*使字体渲染更顺滑*/
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
 }
-/**
- * 移除常用标签的浏览器默认的`margin、padding`
- * pre、code、legend、fieldset、blockquote……等其他标签不是很常用
- */
-body,
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-dl,
-dd,
-ul,
-ol,
-th,
-td,
-button,
-figure,
-input,
-textarea,
-form {
+body,p,h1,h2,h3,h4,h5,h6,dl,dd,ul,ol,th,td,button,figure,input,textarea,form,pre,code,legend,fieldset,blockquote {/*移除常用标签margin、padding*/
     margin: 0;
     padding: 0;
 }
-/*不同浏览器的input、select、textarea的盒子模型宽度计算方式不通，统一为最常见的content-box*/
-input,
-select,
-textarea {
+input,select,textarea {/*不同浏览器的input、select、textarea的盒子模型宽度计算方式不同，统一为content-box*/
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
 }
-/**
- * `table`相邻单元格的边框间的距离设置为0。
- * 设置`table`的边框为合并模式。
- */
-
-table {
+table {/*table相邻单元格的边框间的距离设置为0,设置table的边框为合并模式*/
     border-spacing: 0;
     border-collapse: collapse;
 }
-/**
- * 移除浏览器部分元素的默认边框。
- * acronym、fieldset……等其他标签不是很常用，所以本css都不会一一列举出来，为了简化。如果项目中用到，可以自己单独写。
- */
-img,
-input,
-button,
-textarea {
+img,input,button,textarea,acronym,fieldset {/*移除浏览器部分元素的默认边框*/
     border: none;
 }
-/*让`textarea`默认不可以放缩*/
-textarea {
+textarea {/*让textarea默认不可以放缩*/
     resize: none;
 }
 /**
@@ -239,53 +183,32 @@ optgroup {
     color: inherit;
     outline: none;
 }
-/*取消火狐浏览器部分版本`input`聚焦的时候默认的`padding、border`*/
-
-input::-moz-focus-inner {
+input::-moz-focus-inner {/*取消火狐浏览器部分版本input聚焦的时候默认的padding、border*/
     padding: 0;
     border: 0;
 }
-
-
-/*取消部分浏览器`input[type='number']`的默认样式*/
-
-input[type='number'] {
+input[type='number'] {/*取消部分浏览器input[type='number']的默认样式*/
     -moz-appearance: textfield;
 }
-
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
     margin: 0;
     -webkit-appearance: none;
 }
-
-
-/*输入控件的`placeholder`颜色设置为`#999`（浅灰色）*/
-
-input::-webkit-input-placeholder,
-textarea::-webkit-input-placeholder {
+/*输入控件的placeholder颜色设置为#999（浅灰色）*/
+input::-webkit-input-placeholder,textarea::-webkit-input-placeholder {
     color: #999;
 }
-
-input:-moz-placeholder,
-textarea:-moz-placeholder {
+input:-moz-placeholder,textarea:-moz-placeholder {
     color: #999;
 }
-
-input::-moz-placeholder,
-textarea::-moz-placeholder {
+input::-moz-placeholder,textarea::-moz-placeholder {
     color: #999;
 }
-
-input:-ms-input-placeholder,
-textarea:-ms-input-placeholder {
+input:-ms-input-placeholder,textarea:-ms-input-placeholder {
     color: #999;
 }
-
-
-/*由于部分浏览器`template`直接显示出来，所以要隐藏`template`元素*/
-
-template {
+template {/*由于部分浏览器template直接显示出来，所以要隐藏template元素*/
     display: none;
 }
 a{
